--- a/style.css
+++ b/style.css
@@ -1,75 +1,155 @@
 /* resets at top! */
-body, h1, ul {
-    margin: 0;
-    padding: 0;
+body,
+h1,
+h2,
+h3,
+p,
+ul {
+  margin: 0;
 }
 
-/* Style! */
+ul {
+  list-style: none;
+  padding: 0;
+}
+
 body {
-    font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  background-color: #f9fafc;
+  color: #69696a;
 }
 
-header {
-    padding: 10px;
+header,
+main {
+  padding: 20px;
+}
+
+h1,
+h2,
+h3 {
+  color: #000;
+}
+
+h1 {
+  font-size: 16px;
+  padding: 5px 0 5px 0;
 }
 
 a {
-    text-decoration: none;
-    color: #69696a;
+  text-decoration: none;
+  color: #69696a;
+  display: block;
 }
 
-li {
-    list-style: none;
-    padding: 5px;
-}
-
-a:hover {
-    color: #000;
-    transition-duration: 0.5s;
+.header-nav a {
+  padding: 5px 0;
 }
 
 a.cta {
-    background-color: #000;
-    text-align: center;
-    color: #fff;
-    padding: 10px;
-    display: block;
-    border-radius: 25px;
+  color: #fff;
+  background-color: #000;
+  padding: 10px;
+  border-radius: 25px;
+  text-align: center;
 }
 
-main {
-    padding: 10px;
-}
-
-p.lorem-ipsum {
-    color: #69696a;
-    
-    padding-left: 20px;
-    border-width: 0 0 0 3px;
-    border-color: #69696a;
-    border-style: solid;
+p.about-us-p {
+  border-left: solid #69696a 3px;
+  padding-left: 20px;
+  margin: 20px 0;
 }
 
 footer {
-    bottom: 0;
-    position: fixed;
-    width: 100%;
-    display: block;
-    background-color: rgba(247, 193, 162, 0.7);
-    padding: 3px;
-    box-sizing: border-box;
+  position: fixed;
+  bottom: 0;
+  background-color: rgba(247, 193, 162, 0.7);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 8px;
 }
 
-.lower-logo {
-    margin: 0;
-    position: absolute;
-    float: left;
-    padding: 5px;
+.footer-heading {
     font-size: smaller;
 }
 
-.lower-nav {
-    float: right;
+.footer-nav ul {
+  display: flex;
+}
+
+.footer-nav a {
+  padding: 0 10px;letter-spacing: normal;
+}
+
+
+
+@media only screen and (min-width: 768px){
+
+header {
     display: flex;
-    font-size: smaller;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.header-nav ul {
+    display: flex;
+}
+
+.header-nav a {
+    padding: 8px;
+}
+
+main {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 100px;
+}
+
+section.about-us {
+    width: 50%;
+}
+
+.circles-container {
+    width: 50%;
+    display: flex;
+    box-sizing: content-box;
+    justify-content: flex-end;
+}
+
+
+
+.circle-1 {
+    width: 200px;
+    height: 200px;
+    background-color:rgba(247, 136, 167, 0.6);
+    border-radius: 100px;
+    position: absolute;
+    right: 10%;
+    
+}
+
+.circle-2 {
+    width: 150px;
+    height: 150px;
+    background-color:rgba(247, 193, 162, 0.7);
+    border-radius: 75px;
+    position: absolute;
+    top: 40%;
+    right: 5%;
+}
+
+.circle-3 {
+    width: 100px;
+    height: 100px;
+    background-color:rgba(207, 130, 213, 0.6);
+    border-radius: 50px;
+    position: absolute;
+    right: 5%;
+    top: 30%;
+    z-index: -5;
+}
+
 }
